2009-06-18  Tobias Burnus  <burnus@net-b.de>
	    Mikael Pettersson  <mikpe@it.uu.se>

	PR debug/40061
	* dwarf2out.c (add_subscript_info): Fix build for
	MIPS_DEBUGGING_INFO.

2009-06-17  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2009-03-16  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/39455
	* tree-ssa-loop-niter.c (number_of_iterations_lt_to_ne): Fix types
	mismatches for POINTER_TYPE_P (type).
	(number_of_iterations_le): Likewise.

	2009-05-19  Zdenek Dvorak  <ook@ucw.cz>

	PR tree-optimization/40087
	* tree-ssa-loop-niter.c (number_of_iterations_ne_max,
	number_of_iterations_ne): Rename never_infinite argument.
	(number_of_iterations_lt_to_ne, number_of_iterations_lt,
	number_of_iterations_le): Handle pointer-type ivs when
	exit_must_be_taken is false.
	(number_of_iterations_cond):  Do not always assume that
	exit_must_be_taken if the control variable is a pointer.

2009-06-17  Richard Guenther  <rguenther@suse.de>

	PR middle-end/40404
	* fold-const.c (fold_binary): Verify the type precision of the
	stripped arguments of the comparison are the same before
	folding the comparison.

2009-06-17  Richard Guenther  <rguenther@suse.de>

	PR middle-end/40389
	* tree-ssa-operands.c (get_modify_stmt_operands): Add NRV
	results to the addresses taken bitmap.
	* tree-scalar-evolution.c (scev_const_prop): Do not insert
	incomplete stmts into the instruction stream.

2009-06-17  Richard Guenther  <rguenther@suse.de>

	PR middle-end/40460
	* tree-chrec.h (build_polynomial_chrec): If we cannot determine
	if there is no evolution of left in the loop bail out.
	* tree-chrec.c (chrec_fold_multiply_poly_poly): CSE one
	chrec_fold_multiply.

2009-06-11  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2008-11-22  Uros Bizjak  <ubizjak@gmail.com>

	PR target/38222
	* config/i386/i386.md (SWI248): New mode iterator.
	(popcount<mode>2): Rename from popcounthi2, popcountsi2 and