@@ -1,3 +1,11 @@
+2009-06-18  H.J. Lu  <hongjiu.lu@intel.com>
+
+	Backport from mainline:
+	2009-06-18  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR target/40470
+	* config/i386/i386.h (CLASS_LIKELY_SPILLED_P): Add SSE_FIRST_REG.
+
 2009-06-18  Tobias Burnus  <burnus@net-b.de>
 	    Mikael Pettersson  <mikpe@it.uu.se>
 
